# kakao-talk-auto-bot

./: .gitignore  AGENT.md  AGENTS.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  gradlew  settings.gradle.kts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: android-ci.yml  maestro.yml  release-apk.yml
.maestro/: home.yaml  room-management.yaml  settings.yaml  smoke.yaml  theme.yaml
app/: build.gradle.kts
app/src/androidTest/java/com/example/chatbotchichi/: ExampleInstrumentedTest.kt  SessionManagerInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: bot_script.js  test_bot.js
app/src/main/cpp/: CMakeLists.txt  llama-jni.cpp
app/src/main/res/drawable/: bg_chat_me.xml  bg_indicator_off.xml  bg_input_field.xml  bg_panel.xml  ic_launcher_monochrome.xml
app/src/main/res/layout/: activity_create_polling.xml  activity_debug_room.xml  activity_edit_bot.xml  activity_main.xml  bot_item.xml  item_chat_message.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
docs/: agent-workflow.md  ci-release.md  contributing-guide.md  icon-refresh-status.md  local-ai-migration-status.md  open-source-maintenance.md  product-overview.md  providers.md  release-distribution-status.md  storage-and-memory.md  testing-quality.md  user-flow.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+46 files in other folders)
